--- a/race-app/README
+++ b/race-app/README
@@ -1,4 +1,4 @@
-Angular-2 Quickstart Template
+Angular-2 Racing Application Showcase
 
 -------------------------------------------------
 Prerequisite: Install Node.js (v4+) and npm (v3+)
